<resources>
    <string name="app_name">Group Orga App</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register instead</string>
    <string name="repeat_email">repeat email</string>
    <string name="repeat_password">repeat password</string>
    <string name="username">username</string>
    <string name="passwords_dont_match">Passwords missmatch</string>
    <string name="emails_dont_match">Emails missmatch</string>
    <string name="title_activity_groups">GroupsActivity</string>
    <string name="api_error_title">Error</string>
    <string name="api_error_message">API returned %d and error text: %s</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="enter_details_for_group">Bitte geben Sie Informationn zur Erstellenden Gruppe ein.</string>
    <string name="groupName">Group name</string>
    <string name="group_name">Group name</string>
    <string name="group_password">Group password</string>
    <string name="title_activity_group_search">GroupSearchActivity</string>
</resources>
